Department and Role entities are added with their controllers and services