@@ -2,13 +2,13 @@ package com.ercanbeyen.springbootfirstrestapi.service.impl;
 
 import com.ercanbeyen.springbootfirstrestapi.entity.*;
 import com.ercanbeyen.springbootfirstrestapi.entity.enums.Currency;
-import com.ercanbeyen.springbootfirstrestapi.entity.enums.Department;
-import com.ercanbeyen.springbootfirstrestapi.entity.enums.Role;
-import com.ercanbeyen.springbootfirstrestapi.exception.EmployeeForbidden;
-import com.ercanbeyen.springbootfirstrestapi.exception.EmployeeNotFound;
+import com.ercanbeyen.springbootfirstrestapi.exception.ResourceNotFound;
 import com.ercanbeyen.springbootfirstrestapi.dto.EmployeeDto;
 import com.ercanbeyen.springbootfirstrestapi.repository.EmployeeRepository;
+import com.ercanbeyen.springbootfirstrestapi.service.DepartmentService;
 import com.ercanbeyen.springbootfirstrestapi.service.EmployeeService;
+import com.ercanbeyen.springbootfirstrestapi.service.RoleService;
+import com.ercanbeyen.springbootfirstrestapi.service.SalaryService;
 import com.ercanbeyen.springbootfirstrestapi.util.CustomPage;
 import lombok.RequiredArgsConstructor;
 
@@ -20,6 +20,7 @@ import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.*;
 import java.util.stream.Collectors;
@@ -33,68 +34,75 @@ public class EmployeeServiceImpl implements EmployeeService {
     @Autowired
     private final ModelMapper modelMapper;
 
+    @Autowired
+    private final DepartmentService departmentService;
+
+    @Autowired
+    private final RoleService roleService;
+
+    @Autowired
+    private final SalaryService salaryService;
+
+
+    @Transactional
     @Override
     public EmployeeDto createEmployee(EmployeeDto employeeDto) {
         Employee employee = modelMapper.map(employeeDto, Employee.class);
 
-        Date createdDate = new Date();
-        String createdBy = "Admin";
+        Department department = departmentService.assignDepartment(employeeDto.getDepartment());
+        Role role = roleService.assignRole(employeeDto.getRole());
+        Salary salary = salaryService.createSalary(employeeDto.getSalary());
 
-        employee.setOccupation(employeeDto.getOccupation());
-        employee.setSalary(employeeDto.getSalary());
+        /*
+        Salary salary = employeeDto.getSalary();
+        salary.setLatestChangeAt(new Date());
+         */
 
-        employee.getOccupation().setCreatedAt(createdDate);
-        employee.getOccupation().setCreatedBy(createdBy);
-
-        employee.getSalary().setCreatedAt(createdDate);
-        employee.getSalary().setCreatedBy(createdBy);
-
-        employee.setCreatedAt(new Date());
-        employee.setCreatedBy("Admin");
+        employee.setDepartment(department);
+        employee.setRole(role);
+        //employee.setSalary(employeeDto.getSalary());
+        employee.setSalary(salary);
 
         return modelMapper.map(employeeRepository.save(employee), EmployeeDto.class);
     }
 
-    @Override
-    public List<EmployeeDto> filterEmployees(Department department, Role role, Currency currency, Optional<Integer> limit) {
-        List<Employee> employees = employeeRepository.findAllByStatus(true);
+    public List<EmployeeDto> filterEmployees(String department, String role, Currency currency, Integer limit) {
 
-        int userLimit;
+        List<Employee> employees = employeeRepository.findAll();
 
-        if (department != null) { // filter employees based on department
+        if (department != null) {
             employees = employees
                     .stream()
-                    .filter(employee -> employee.getOccupation().getDepartment() == department)
+                    .filter(employee -> employee.getDepartment().getName().equals(department))
                     .collect(Collectors.toList());
         }
 
-        if (role != null) { // filter employees based on position
+        if (role != null) {
             employees = employees
                     .stream()
-                    .filter(user -> user.getOccupation().getRole() == role)
-                    .toList();
+                    .filter(employee -> employee.getRole().getName().equals(role))
+                    .collect(Collectors.toList());
         }
 
         if (currency != null) {
             employees = employees
                     .stream()
                     .filter(employee -> employee.getSalary().getCurrency().equals(currency))
-                    .toList();
-        }
-
-        if (limit.isPresent()) { // get employees with the highest salary
-            userLimit = limit.get();
-            employees = employees
-                    .stream()
-                    .sorted((employee1, employee2) -> {
-                        double salaryAmount1 = employee1.getSalary().getAmount();
-                        double salaryAmount2 = employee2.getSalary().getAmount();
-                        return Double.compare(salaryAmount2, salaryAmount1); // reverse sorting with changing place of the parameters
-                    })
-                    .limit(userLimit)
                     .collect(Collectors.toList());
-        }
 
+            if (limit != null) {
+                employees = employees
+                        .stream()
+                        .sorted((employee1, employee2) -> {
+                            double amount1 = employee1.getSalary().getAmount();
+                            double amount2 = employee2.getSalary().getAmount();
+                            return Double.compare(amount2, amount1);
+                        })
+                        .limit(limit)
+                        .collect(Collectors.toList());
+            }
+
+        }
         return modelMapper.map(employees, new TypeToken<List<EmployeeDto>>(){}.getType());
     }
 
@@ -104,23 +112,14 @@ public class EmployeeServiceImpl implements EmployeeService {
         boolean isLastNameFull = StringUtils.isNotBlank(lastName);
         List<Employee> employees;
 
-        if (!isFirstNameFull && !isLastNameFull) {
-            employees = new ArrayList<>();
+        if (isFirstNameFull && isLastNameFull) { // search by first name and last name
+            employees = employeeRepository.findByFirstNameAndLastName(firstName, lastName);
         }
-        else {
-            if (isFirstNameFull && isLastNameFull) { // search by first name and last name
-                employees = employeeRepository.findAllByFirstNameAndLastName(firstName, lastName);
-            }
-            else if (isFirstNameFull) { // search by first name
-                employees = employeeRepository.findAllByFirstName(firstName);
-            }
-            else { // search by last name
-                employees = employeeRepository.findAllByLastName(lastName);
-            }
-            employees = employees // at the end, filter by status
-                    .stream()
-                    .filter(Employee::isStatus)
-                    .collect(Collectors.toList());
+        else if (isFirstNameFull) { // search by first name
+            employees = employeeRepository.findByFirstName(firstName);
+        }
+        else { // search by last name
+            employees = employeeRepository.findByLastName(lastName);
         }
 
         return modelMapper.map(employees, new TypeToken<List<EmployeeDto>>(){}.getType());
@@ -134,53 +133,48 @@ public class EmployeeServiceImpl implements EmployeeService {
             return modelMapper.map(user.get(), EmployeeDto.class);
         }
 
-        throw new EmployeeNotFound("User with id " + id + " is not found");
+        throw new ResourceNotFound("User with id " + id + " is not found");
     }
 
+    @Transactional
     @Override
-    public EmployeeDto updateEmployee(int id, EmployeeDto employee) {
-        Optional<Employee> requestedEmployee = employeeRepository.findById(id);
+    public EmployeeDto updateEmployee(int id, EmployeeDto employeeDto) {
 
-        if (requestedEmployee.isEmpty()) {
-            throw new EmployeeNotFound("User with id " + id + " is not found");
-        }
+        Employee employee = employeeRepository.findById(id).orElseThrow(
+                () -> new ResourceNotFound("Employee with id " + id + " not found")
+        );
 
-        Employee employeeInDb = requestedEmployee.get();
+        employee.setFirstName(employeeDto.getFirstName());
+        employee.setLastName(employeeDto.getLastName());
+        employee.setEmail(employeeDto.getEmail());
+        employee.setContactNumber(employee.getContactNumber());
+        employee.setNationality(employeeDto.getNationality());
+        employee.setGender(employeeDto.getGender());
 
-        if (!employeeInDb.isStatus()) {
-            throw new EmployeeForbidden("User with id " + id + " is deactivated");
-        }
+        Department department = departmentService.assignDepartment(employeeDto.getDepartment());
+        Role role = roleService.assignRole(employeeDto.getRole());
+        Salary salary = salaryService.updateSalary(employee.getSalary().getId(), employeeDto.getSalary());
 
-        employeeInDb.setFirstName(employee.getFirstName());
-        employeeInDb.setLastName(employee.getLastName());
-        employeeInDb.setEmail(employee.getEmail());
-        employeeInDb.setNationality(employee.getNationality());
-        employeeInDb.setOccupation(employee.getOccupation());
-        employeeInDb.setSalary(employee.getSalary());
+        employee.setDepartment(department);
+        employee.setRole(role);
+        employee.setSalary(salary);
 
-        Date updatedDate = new Date();
-        String updatedBy = "Admin";
-
-        employeeInDb.getOccupation().setUpdatedAt(updatedDate);
-        employeeInDb.getSalary().setUpdatedAt(updatedDate);
-        employeeInDb.setUpdatedAt(updatedDate);
-        employeeInDb.setUpdatedBy(updatedBy);
-
-        return modelMapper.map(employeeRepository.save(employeeInDb), EmployeeDto.class);
+        return modelMapper.map(employeeRepository.save(employee), EmployeeDto.class);
     }
 
     @Override
     public void deleteEmployee(int id) {
-        employeeRepository.findById(id).ifPresentOrElse(
-                employee -> {
-                    if (employee.isStatus()) {
-                        throw new EmployeeForbidden("Active employees cannot be deleted");
-                    }
-                    employeeRepository.deleteById(id);
-                    },
-                () -> {
-            throw new EmployeeNotFound("Employee with id " + id + " is not found");
-                });
+        Employee employee = employeeRepository.findById(id).orElseThrow(
+                () -> new ResourceNotFound("Employee with id " + id + " is not found")
+        );
+
+        // Remove bidirectional connections between employee&department and employee&role
+        employee.getDepartment().removeEmployee(employee);
+        employee.setDepartment(null);
+        employee.getRole().removeEmployee(employee);
+        employee.setRole(null);
+
+        employeeRepository.deleteById(id);
     }
 
     @Override
@@ -203,23 +197,7 @@ public class EmployeeServiceImpl implements EmployeeService {
     public CustomPage<EmployeeDto> customPagination(Pageable pageable) {
         Page<Employee> page = employeeRepository.findAll(pageable);
         EmployeeDto[] employees = modelMapper.map(page.getContent(), EmployeeDto[].class);
-        return new CustomPage<EmployeeDto>(page, Arrays.asList(employees));
-    }
-
-    @Override
-    public boolean changeStatus(int id) {
-        Optional<Employee> optionalEmployee = employeeRepository.findById(id);
-
-        if (optionalEmployee.isEmpty()) {
-            throw new EmployeeNotFound("Employee with id " + id + " is not found");
-        }
-
-        Employee employee = optionalEmployee.get();
-        boolean nextStatus = !employee.isStatus();
-        employee.setStatus(nextStatus);
-        employeeRepository.save(employee);
-
-        return nextStatus;
+        return new CustomPage<>(page, Arrays.asList(employees));
     }
 
 }
